Función validar tickets

--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
                 document.getElementById('tickets-error').innerHTML = "El número de tickets no puede exceder el aforo permitido";
                 esValido = false;
             }
+            
+            return esValido;
         }
     </script>
 </body>
